syntax = "proto2";

package sf.solana.block_meta.v1;

message PbInitUpdateAuthorityLayout {
  optional string newCosigner = 1;
  optional string newOwner = 2;
}

message PbInitUpdateWhitelistLayout {
  repeated uint32 uuid = 1;
  repeated uint32 rootHash = 2;
  repeated uint32 name = 3;
  optional string voc = 4;
  optional string fvc = 5;
}

message PbArray {
  repeated uint32 value = 1;
}

message PbInitUpdateMintProofLayout {
  repeated PbArray proof = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbInitUpdateAuthorityLayout initUpdateAuthority = 2;
  optional PbInitUpdateWhitelistLayout initUpdateWhitelist = 3;
  optional PbInitUpdateMintProofLayout initUpdateMintProof = 4;
}

message InputAccounts {
  optional string whitelistAuthority = 1;
  optional string cosigner = 2;
  optional string owner = 3;
  optional string systemProgram = 4;
  optional string whitelist = 5;
  optional string mint = 6;
  optional string mintProof = 7;
  optional string user = 8;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}